--- a/index.html
+++ b/index.html
@@ -179,19 +179,19 @@
                             <h2>Technical</h2>
                             <div class="tech-skills">
                                 <div >
-                                    <img class="logos" src="/logos/html.svg" alt="HTML logo">
+                                    <img class="logo" src="./logos/html.svg" alt="HTML logo">
                                     <p>HTML5</p>
                                 </div>
                                 <div>
-                                    <img class="logos" src="/logos/css.svg" alt="CSgitS logo">
+                                    <img class="logo" src="./logos/css.svg" alt="CSgitS logo">
                                     <p>CSS3</p> 
                                 </div>       
                                 <div>
-                                    <img class="logos" src="/logos/javascript.svg" alt="JS logo">
+                                    <img class="logo" src="./logos/javascript.svg" alt="JS logo">
                                     <p>JavaScript</p> 
                                 </div>  
                                 <div>
-                                    <img class="logos" src="/logos/java.svg" alt="Java logo">
+                                    <img class="logo" src="./logos/java.svg" alt="Java logo">
                                     <p>Java</p> 
                                 </div>                           
                             </div>
