Remove deleted file public/contact.html

--- a/index.html
+++ b/index.html
@@ -193,7 +193,11 @@
                                 <div>
                                     <img class="logo" src="./logos/java.svg" alt="Java logo">
                                     <p>Java</p> 
-                                </div>                           
+                                </div> 
+                                <div>
+                                    <img class="logo" src="./logos/github.svg" alt="Java logo">
+                                    <p>GitHub</p> 
+                                </div>                          
                             </div>
 
                         </div>
