Add tech-logo class with its style

--- a/index.html
+++ b/index.html
@@ -178,23 +178,23 @@
                         <div class="computing">
                             <h2>Technical</h2>
                             <div class="tech-skills">
-                                <div >
+                                <div class="tech-logo">
                                     <img class="logo" src="./logos/html.svg" alt="HTML logo">
                                     <p>HTML5</p>
                                 </div>
-                                <div>
+                                <div class="tech-logo">
                                     <img class="logo" src="./logos/css.svg" alt="CSgitS logo">
                                     <p>CSS3</p> 
                                 </div>       
-                                <div>
+                                <div class="tech-logo">
                                     <img class="logo" src="./logos/javascript.svg" alt="JS logo">
                                     <p>JavaScript</p> 
                                 </div>  
-                                <div>
+                                <div class="tech-logo">
                                     <img class="logo" src="./logos/java.svg" alt="Java logo">
                                     <p>Java</p> 
                                 </div> 
-                                <div>
+                                <div class="tech-logo">
                                     <img class="logo" src="./logos/github.svg" alt="Java logo">
                                     <p>GitHub</p> 
                                 </div>                          
