Add resume and code to download in html, navbar links bold on hover

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                                 <a class="navbar" href="#education">Education</a>
                                 <a class="navbar" href="#experience">Experience</a>
                                 <a class="navbar" href="#contact">Contact</a>
-                                <a class="navbar" href="#">Download</a>
+                                <a class="navbar" href="/resume/Korhan_CAKIR_Jan2025_v2.pdf" download>Download CV</a>
                             </nav>
                         </div>
 
@@ -64,17 +64,17 @@
                             <div>
                                 <h2>Licenses & Certifications</h2>
                                 <div class="title">
-                                    <img class="logo" src="./logos/uniDuke.png" alt="Duke University logo" >
+                                    <img class="logo" src="logos/uniDuke.png" alt="Duke University logo" >
                                     <p>Programming Foundations with JavaScript, HTML and CSS<br>
                                         Duke University- issued Nov 2024,
-                                        <a href="https://www.coursera.org/account/accomplishments/verify/THJY0S9BCGFP"><span>Credential ID THJY0S9BCGFP</span></a>
+                                        <a href="https://www.coursera.org/account/accomplishments/verify/THJY0S9BCGFP" target="_blank"><span>Credential ID THJY0S9BCGFP</span></a>
                                     </p>
                                 </div>
                                 <div class="title">
                                     <img class="logo" src="logos/IBM.png" alt="Duke University logo" >
                                     <p>Introduction to HTML, CSS, & JavaScript<br>
                                         IBM- issued Jan 2025,
-                                        <a href="https://www.coursera.org/account/accomplishments/verify/EDW4MYLIP3G3"><span>Credential ID EDW4MYLIP3G3</span></a>
+                                        <a href="https://www.coursera.org/account/accomplishments/verify/EDW4MYLIP3G3" target="_blank"><span>Credential ID EDW4MYLIP3G3</span></a>
                                     </p>
                                 </div>
                             </div>
@@ -87,7 +87,7 @@
                         <div class="experience">
                             <div class="job-experience" >
                                 <div class="title">
-                                    <img class="logo" src="./logos/ibanpay.png" alt="ibanpay company logo"  >
+                                    <img class="logo" src="logos/ibanpay.png" alt="ibanpay company logo"  >
                                     <p class="companies">Ibanpay, Latvia</p>
                                 </div>
 
@@ -108,9 +108,9 @@
                                </ul>
 
                             </div>
-                            <div div class="job-experience" >
+                            <div class="job-experience" >
                                 <div class="title" >
-                                    <img class="logo" src="./logos/modernAmb.png" alt="Modern Ambalaj company logo" >
+                                    <img class="logo" src="logos/modernAmb.png" alt="Modern Ambalaj company logo" >
                                     <p class="companies">Modern Oluklu Mukavva Ambalaj San. ve Tic. A.Ş., Turkiye</p>
                                 </div>
                                 <ul class="job-title">
@@ -126,7 +126,7 @@
 
                             <div div class="job-experience" >
                                 <div class="title">
-                                    <img class="logo" src="./logos/mondiGroup.png" alt="Mondi Group company logo"  >
+                                    <img class="logo" src="logos/mondiGroup.png" alt="Mondi Group company logo"  >
                                     <p class="companies">Mondi Group, Turkiye</p>
                                 </div>
 
@@ -146,7 +146,7 @@
 
                             <div div class="job-experience" >
                                 <div class="title">
-                                    <img class="logo" src="./logos/noLogo.png" alt="no logo" >
+                                    <img class="logo" src="logos/noLogo.png" alt="no logo" >
                                     <p class="companies">Olkusan A.S., Turkiye</p>
                                 </div>
 
@@ -179,23 +179,23 @@
                             <h2>Technical</h2>
                             <div class="tech-skills">
                                 <div class="tech-logo">
-                                    <img class="logo" src="./logos/html.svg" alt="HTML logo">
+                                    <img class="logo" src="logos/html.svg" alt="HTML logo">
                                     <p>HTML5</p>
                                 </div>
                                 <div class="tech-logo">
-                                    <img class="logo" src="./logos/css.svg" alt="CSgitS logo">
+                                    <img class="logo" src="logos/css.svg" alt="CSgitS logo">
                                     <p>CSS3</p> 
                                 </div>       
                                 <div class="tech-logo">
-                                    <img class="logo" src="./logos/javascript.svg" alt="JS logo">
+                                    <img class="logo" src="logos/javascript.svg" alt="JS logo">
                                     <p>JavaScript</p> 
                                 </div>  
                                 <div class="tech-logo">
-                                    <img class="logo" src="./logos/java.svg" alt="Java logo">
+                                    <img class="logo" src="logos/java.svg" alt="Java logo">
                                     <p>Java</p> 
                                 </div> 
                                 <div class="tech-logo">
-                                    <img class="logo" src="./logos/github.svg" alt="Java logo">
+                                    <img class="logo" src="logos/github.svg" alt="Java logo">
                                     <p>GitHub</p> 
                                 </div>                          
                             </div>
@@ -210,7 +210,8 @@
                     <ul class="contact-list">
                         <li class="contact"><img class="icon" src="images/home-outline.svg" alt="home icon" ><span class="contact-span">Austrumu Iela, Rīga</span></li>
                         <li class="contact"><img class="icon" src="images/call-outline.svg" alt="phone icon"><span class="contact-span">+371 29 732 883</span></li>
-                        <li class="contact"><img class="icon" src="images/send-outline.svg" alt="email icon"><span class="contact-span">korhancakir@gmail.com</span></li>
+                        <li class="contact"><img class="icon" src="images/send-outline.svg" alt="email icon"><span class="contact-span"><a href="mailto:korhancakir@gmail.com">korhancakir@gmail.com</a>
+                        </span></li>
                     </ul>
                     <p>©2025 Korhan CAKIR. All rights reserved.</p>
                 </footer>
