--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                                 <a class="navbar" href="#education">Education</a>
                                 <a class="navbar" href="#experience">Experience</a>
                                 <a class="navbar" href="#contact">Contact</a>
-                                <a class="navbar" href="/resume/Korhan_CAKIR_Jan2025_v2.pdf" download>Download CV</a>
+                                <a class="navbar" href="/resume/Korhan_CAKIR_Jan2025_v2.pdf" >Download CV</a>
                             </nav>
                         </div>
 
