apply grid and flex

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 </ul>
                             </div>
 
-                            <div div class="job-experience" >
+                            <div class="job-experience" >
                                 <div class="title">
                                     <img class="logo" src="logos/mondiGroup.png" alt="Mondi Group company logo"  >
                                     <p class="companies">Mondi Group, Turkiye</p>
@@ -144,7 +144,7 @@
                                 </ul>
                             </div>
 
-                            <div div class="job-experience" >
+                            <div class="job-experience" >
                                 <div class="title">
                                     <img class="logo" src="logos/noLogo.png" alt="no logo" >
                                     <p class="companies">Olkusan A.S., Turkiye</p>
@@ -170,9 +170,9 @@
                         <div class="language">
                             <h2>Language</h2>
                             <ul>
-                                <li>Turkish - Native</li>
-                                <li>English - Professional proficiency</li>
-                                <li>Latvian - Elementary proficiency</li>
+                                <li><span>Turkish</span> - Native</li>
+                                <li><span>English</span> - Professional proficiency</li>
+                                <li><span>Latvian</span> - Elementary proficiency</li>
                             </ul>
                         </div>
                         <div class="computing">
